tools/vendor/zerocopy-derive/tests/ui-msrv/privacy.stderr
error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:96:9
   |
96 |         _,
   |         ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:101:9
    |
101 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:109:9
    |
109 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:114:9
    |
114 |         _,
    |         ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:120:52
    |
120 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:122:52
    |
122 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
    |                                                    ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:127:51
    |
127 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:129:51
    |
129 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:132:51
    |
132 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:31:13
   |
31 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:36:13
   |
36 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:48:13
   |
48 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:53:13
   |
53 |             _,
   |             ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:66:56
   |
66 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:67:56
   |
67 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:79:55
   |
79 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:80:55
   |
80 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:82:55
   |
82 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`
